// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. lead one full width slice 1`] = `
<div>
  <TileR />
</div>
`;

exports[`2. lead one and one slice 1`] = `
<div>
  <TileA />
  <TileB />
</div>
`;

exports[`3. lead one and four slice 1`] = `
<div>
  <TileI />
  <TileJ />
  <div />
  <TileJ />
  <div />
  <TileJ />
  <div />
  <TileJ />
</div>
`;

exports[`4. lead two no pic and two 1`] = `
<div>
  <TileF />
  <div />
  <TileB />
  <div />
  <TileD />
  <div />
  <TileE />
</div>
`;

exports[`5. secondary one slice 1`] = `<TileA />`;

exports[`6. secondary four slice 1`] = `
<div>
  <div>
    <div>
      <div>
        <TileC />
      </div>
      <div />
      <div>
        <TileC />
      </div>
    </div>
    <div />
    <div>
      <div>
        <TileC />
      </div>
      <div />
      <div>
        <TileC />
      </div>
    </div>
  </div>
</div>
`;

exports[`7. secondary one and four slice 1`] = `
<div>
  <div>
    <TheTimesLogo
      height={40}
      width={40}
    />
  </div>
  <div />
  <div>
    <div>
      <div>
        <TileN />
      </div>
    </div>
    <div />
    <div>
      <TileO />
    </div>
    <div />
    <div>
      <TileO />
    </div>
    <div />
    <div>
      <TileO />
    </div>
    <div />
    <div>
      <TileO />
    </div>
  </div>
</div>
`;

exports[`8. secondary two and two slice 1`] = `
<div>
  <div>
    <div>
      <TileC />
    </div>
    <div />
    <div>
      <TileC />
    </div>
  </div>
  <div />
  <div>
    <TileG />
  </div>
  <div />
  <div>
    <TileG />
  </div>
</div>
`;

exports[`9. secondary two no pic and two slice 1`] = `
<div>
  <TileB />
  <div />
  <TileB />
  <div />
  <TileG />
  <div />
  <TileG />
</div>
`;

exports[`10. list two and six no pic slice 1`] = `
<div>
  <div>
    <div>
      <TileC />
    </div>
    <div />
    <div>
      <TileC />
    </div>
  </div>
  <div />
  <div>
    <TileL />
    <div />
  </div>
  <div>
    <TileL />
    <div />
  </div>
  <div>
    <TileL />
    <div />
  </div>
  <div>
    <TileL />
    <div />
  </div>
  <div>
    <TileL />
    <div />
  </div>
  <div>
    <TileL />
  </div>
</div>
`;

exports[`11. leaders slice 1`] = `
<div>
  <div>
    <Image
      aspectRatio={5.74}
      uri="https://www.thetimes.co.uk/d/img/leaders-masthead-d17db00289.png"
    />
    <div>
      <div>
         Leading Articles 
      </div>
    </div>
  </div>
  <div>
    <TileM />
    <div />
    <TileM />
    <div />
    <TileM />
  </div>
</div>
`;
